package Guias.TP5.Ej3.P2;

public interface Movable {

    void moveNorth(double delta);

    void moveSouth(double delta);

    void moveWest(double delta);

    void moveEast(double delta);

}

